[tool.poetry]
name = "23.09.23-telegram-questionnaire-bot"
version = "0.1.0"
description = ""
authors = ["Ariulis <andrey59995@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.1.0"
loguru = "^0.7.2"
pydantic-settings = "^2.0.3"
aiocsv = "^1.2.4"

[tool.poetry.dev-dependencies]
autopep8 = "^2.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
